[package]
name = "kvasir-lang"
version = "0.2.0"
authors = ["bryal <96.bryal@gmail.com>"]
repository = "https://github.com/bryal/kvasir-lang"
license = "GPLv3"

[dependencies]
getopts = "*"
bitflags = "*"
lazy_static = "*"
term = "*"
llvm-sys = { path = "llvm-sys.rs" }
itertools = "*"
cbox = "0.*"
libc = "0.*"