[package]
name = "kvasir"
version = "0.3.0"
authors = ["bryal <96.bryal@gmail.com>"]
repository = "https://github.com/bryal/kvasir"
license = "GPLv3"

[dependencies]
getopts = "*"
bitflags = "*"
lazy_static = "*"
term = "*"
llvm-sys = "50"
itertools = "*"
maplit = "*"
cbox = "0.*"
libc = "0.*"
cpuprofiler = "0.0.3"